hovers not overlay

--- a/styles.css
+++ b/styles.css
@@ -48,30 +48,59 @@ img {
     border-radius: 16px;
     max-width: 100%;
 }
+/* 
+a.container {
+    display: block;
+    position: relative;
+}
 
-div.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 16px;
+a.container img {
+    display: block;
     max-width: 100%;
-    position: relative; 
+}
+
+a.container::before, ::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+a.container::before {
     background-color: hsl(178, 100%, 50%);
+    border-radius: 16px;
+    z-index: -2;
 }
 
-img.overlay {
-    position: absolute; 
-    width: 15%;
-    bottom: 100px;
-    left: 105px;
+a.container::after {
+    background-image: url(/images/icon-view.svg);
+    background-repeat: no-repeat;
+    z-index: -1;
 }
 
+a.container:hover::before {
+    opacity: 0.7;
+}
+
+a.container:hover::after {
+    opacity: 1; 
+} */
+
+img.equilibrium {
+    display: block;
+    max-width: 100%;
+}
 
 h1 {
     color: hsl(0, 0%, 100%);
     font-size: 1.1em;
     font-weight: 600;
     margin: 20px 0 10px 0;
+}
+
+a h1:hover {
+    color: hsl(178, 100%, 50%);
 }
 
 h2 {
@@ -158,6 +187,10 @@ h4 p {
     display: inline-block;
 }
 
+h4 p:hover {
+    color: hsl(178, 100%, 50%);
+}
+
 footer {
     display: flex;
     justify-content: center;
@@ -166,15 +199,4 @@ footer {
     font-size: 0.6em;
     color: hsl(0, 0%, 100%); 
     font-weight: 300;
-}
-
-a:hover {
-    h1, p {
-        color: hsl(178, 100%, 50%);
-    }
-
-    img {
-        opacity: 50%;
-    }
-
 }
